# templates

./: .gitignore  .prettierignore  AGENTS.md  CODEOWNERS  COMMUNITY_TEMPLATE_GUIDE.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  TEMPLATES.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  templates.json  tsconfig.json
.claude/: ralph-loop.local.md
.github/: pull_request_template.md
.github/workflows/: dependabot-lockfile.yml  generate-metadata.yml  stale-prs.yml  templates.json  test-templates.yml  test.yml  validate-templates.yml
community/atomid-verification-template/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
community/commerce-kit-store/: .env.example  README.md  next.config.ts  package.json
community/drift-hello-world/: README.md  next.config.ts  package.json
community/eve-pay/: README.md  package.json
community/gill-jito-airdrop/: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  types.ts
community/gill-jupiter-swap/: README.md  env.example  next.config.js  package-lock.json  package.json  tsconfig.json
community/gill-next-permaweb-arns/: .gitignore  README.md  next.config.ts  package.json
community/gill-node-solanax402/: .eslintrc.json  .prettierrc.json  README.md  SETUP.md  ecosystem.config.cjs  env.example  generate-test-client.mjs  package.json  test-402-response.mjs  test-replay-attack.mjs  test-true-x402.mjs  tsconfig.json
community/gill-supabase-web3/: README.md  package.json
community/honojs-solder-indexing/: .env.example  README.md  drizzle.config.ts  package.json  solder.config.ts  solder.schema.ts
community/ika-template/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
community/kit-node-solanax402/: README.md  SETUP.md  env.example  package.json  test-402-response.mjs  test-replay-attack.mjs  test-true-x402.mjs  tsconfig.json
community/solana-blinks-axum/: .env.example  .gitignore  Cargo.toml  README.md  package.json
community/solana-blinks-axum/frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package.json
community/solana-blinks-axum/frontend/src/app/: globals.css  layout.tsx  page.tsx
community/solana-blinks-axum/frontend/src/components/: blink-card.tsx  providers.tsx  wallet-button.tsx
community/solana-blinks-axum/frontend/src/lib/: actions.ts  constants.ts  types.ts
community/solana-blinks-axum/src/: consts.rs  cors.rs  error.rs  main.rs  router.rs  spec.rs  state.rs
community/solana-blinks-axum/src/actions/: donate.rs  mod.rs  registry.rs  swap.rs  transfer.rs  utils.rs
kit/axum-keychain/: .env.example  .gitignore  .prettierignore  Cargo.toml  README.md  next.config.ts  package.json
kit/axum-keychain/app/: layout.tsx  page.tsx
kit/axum-keychain/app/lib/: demo-transaction.ts
kit/axum-keychain/src/: api.rs  main.rs  signers.rs
kit/pinocchio-counter/clients/rust/: Cargo.toml
legacy/: README.md
my-solana-app/: README.md  my-solana-app.config.ts  package-lock.json  package.json
pinocchio/pinocchio-counter/: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  tsconfig.json
pinocchio/pinocchio-counter/clients/rust/: Cargo.toml
pinocchio/pinocchio-counter/clients/typescript/: package.json
pinocchio/pinocchio-counter/idl/: pinocchio_counter.json
pinocchio/pinocchio-counter/program/: Cargo.toml
pinocchio/pinocchio-counter/program/src/: entrypoint.rs  errors.rs
pinocchio/pinocchio-counter/program/src/events/: mod.rs
pinocchio/pinocchio-counter/program/src/instructions/: definition.rs  mod.rs
pinocchio/pinocchio-counter/program/src/instructions/close_counter/: accounts.rs  data.rs  instruction.rs
pinocchio/pinocchio-counter/program/src/instructions/create_counter/: accounts.rs  processor.rs
pinocchio/pinocchio-counter/program/src/instructions/increment/: accounts.rs  instruction.rs  processor.rs
pinocchio/pinocchio-counter/program/src/state/: counter.rs
pinocchio/pinocchio-counter/program/src/traits/: account.rs  event.rs  instruction.rs  pda.rs
pinocchio/pinocchio-counter/program/src/utils/: account_utils.rs  pda_utils.rs  program_utils.rs
pinocchio/pinocchio-counter/scripts/lib/: pinocchio-counter-codama-builder.ts
pinocchio/pinocchio-counter/scripts/lib/updates/: append-account-discriminator.ts  append-pda-derivers.ts  index.ts  set-instruction-account-default-values.ts
pinocchio/pinocchio-counter/tests/integration-tests/: Cargo.toml
pinocchio/pinocchio-counter/tests/integration-tests/src/: lib.rs  test_close_counter.rs  test_increment.rs
pinocchio/pinocchio-counter/tests/integration-tests/src/fixtures/: close_counter.rs  increment.rs  mod.rs
pinocchio/pinocchio-counter/tests/integration-tests/src/utils/: assertions.rs  mod.rs  pda_utils.rs  setup.rs  test_helpers.rs  traits.rs
scripts/: clean.ts  create-image.ts  create-template-readme.ts  generate.ts  health-check.ts  lint.ts  validate.ts
templates/: README.md
web3js/web3js-next-tailwind-basic/anchor/programs/basic/: Cargo.toml
web3js/web3js-next-tailwind-basic/anchor/programs/basic/src/: lib.rs  tests.rs
web3js/web3js-next-tailwind-counter/anchor/programs/counter/: Cargo.toml
web3js/web3js-next-tailwind-counter/anchor/programs/counter/src/: lib.rs  tests.rs
(+1854 files in other folders)
