[package]
name = "solana-blinks-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-sdk = "2.3.1"
solana-client = "2.3.13"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
bincode = "1.3"
bs58 = "0.5.1"
base64 = "0.22.1"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
async-trait = "0.1"
