[package]
name = "axum-keychain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-keychain = { version = "1.4", default-features = false, features = [
    "all",
    "sdk-v2",
] }
solana-sdk = "2.3"
spl-memo = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
