[package]
name = "tests-pinocchio-counter"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
litesvm = "^0.9.0"
pinocchio-counter-client = { path = "../../clients/rust", features = [
    "fetch",
], default-features = false }
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-account = "~3.2"
solana-system-interface = "3.0.0"
solana-address = "2.0.0"
