[package]
name = "basic"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
anchor-litesvm = "0.2.0"
litesvm = "0.6.1"
litesvm-utils = "0.2.0"
solana-sdk = "2.2"

